tests/global_this_already_defined/test.js
globalThis.alert(); // error: globalThis is defined to be mixed
alert();
